<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.kuloglu.hungry.ui.detail.DetailActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.user.userName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="mkuloglu" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/eMail"
            android:inputType="textEmailAddress"
            android:onTextChanged="@{() -> viewModel.onTextChanged()}"
            android:text="@={viewModel.user.eMail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="mustafakuloglunun@gmail.com" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/eMail"
            android:inputType="phone"
            android:onTextChanged="@{() -> viewModel.onTextChanged()}"
            android:text="@={viewModel.user.phoneNumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="+9055555555" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textMultiLine|textPostalAddress"
            android:onTextChanged="@{() -> viewModel.onTextChanged()}"
            android:singleLine="false"
            android:text="@={viewModel.user.address}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Konaklar mah. Salı Pazarı cad. Zooloji sok. no:1 kat:0 kapı no:1 Beşiktaş İstanbul" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userName"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/eMail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/mail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>